<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bflavien.contact.activity.EditContactActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/editText_firstname"
        android:ems="10"
        android:id="@+id/editText_editContactActivity_firstname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    android:layout_alignParentStart="true"
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/editText_lastname"
        android:ems="10"
        android:id="@+id/editText_editContactActivity_lastname"
        android:layout_below="@+id/editText_editContactActivity_firstname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_editContactActivity_firstname"
        android:layout_alignEnd="@+id/editText_editContactActivity_firstname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_editContactActivity_phone"
        android:hint="@string/editText_phonenumber"
        android:layout_below="@+id/editText_editContactActivity_lastname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_editContactActivity_lastname"
        android:layout_alignEnd="@+id/editText_editContactActivity_lastname" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_editContactActivity_email"
        android:hint="@string/editText_email"
        android:layout_below="@+id/editText_editContactActivity_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_editContactActivity_phone"
        android:layout_alignEnd="@+id/editText_editContactActivity_phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText_editContactActivity_address"
        android:hint="@string/editText_address"
        android:layout_below="@+id/editText_editContactActivity_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_editContactActivity_email"
        android:layout_alignEnd="@+id/editText_editContactActivity_email" />
</RelativeLayout>
